Revert "navbar - fixed avatar overflowing size"
This reverts commit f42cd446a927b4e429c6a26cf0fed7ce4cff92cc.

--- a/src/css/bundle.css
+++ b/src/css/bundle.css
@@ -3775,10 +3775,6 @@ background: var(--variant-hover-bg);
 color: var(--variant-hover);
 }
 
-.kroma-navbar .kroma-avatar {
-  max-width: calc(var(--nav-size-base) / 1.5);
-  max-height: calc(var(--nav-size-base) / 1.5);
-}
 
 
 /* --- pagination.css --- */
